force-app/main/default/objects/Document_Requirement__c/Document_Requirement__c.object-meta.xml
<CustomObject>
    <label>Document Requirement</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>