force-app/main/default/objects/Document_Requirement__c/fields/ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_Id__c</fullName>
    <label>ContentVersion ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>