force-app/main/default/objects/Document_Requirement__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Statements</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Articles of Incorporation</fullName>
            </value>
            <value>
                <fullName>EIN Letter</fullName>
            </value>
            <value>
                <fullName>Processing Statements</fullName>
            </value>
            <value>
                <fullName>Voided Check</fullName>
            </value>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>Utility Bill</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>